--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,4 @@
-# List of source files containing translatable strings for libgsasl.
-# Copyright (c) 2002, 2003 by Simon Josefsson
-
-lib/error.c
+# List of source files containing translatable strings for GNU SASL.
+# Copyright (c) 2002, 2003, 2004 by Simon Josefsson
 src/gsasl.c
 src/callbacks.c
