--- a/m4/.cvsignore
+++ b/m4/.cvsignore
@@ -3,6 +3,7 @@ gettext.m4
 glibc21.m4
 iconv.m4
 intdiv0.m4
+intmax.m4
 inttypes-pri.m4
 inttypes.m4
 inttypes_h.m4
@@ -11,10 +12,17 @@ lcmessage.m4
 lib-ld.m4
 lib-link.m4
 lib-prefix.m4
-libtool.m4
+longdouble.m4
+longlong.m4
 nls.m4
 po.m4
+printf-posix.m4
 progtest.m4
+signed.m4
+size_max.m4
 stdint_h.m4
 uintmax_t.m4
 ulonglong.m4
+wchar_t.m4
+wint_t.m4
+xsize.m4
