--- a/lib/cram-md5/Makefile.am
+++ b/lib/cram-md5/Makefile.am
@@ -21,4 +21,5 @@
 AM_CPPFLAGS = -I$(srcdir)/../src -I../src
 
 noinst_LTLIBRARIES = libgsasl-cram_md5.la
-libgsasl_cram_md5_la_SOURCES = cram-md5.h cram-md5.c
+libgsasl_cram_md5_la_SOURCES = cram-md5.h cram-md5.c \
+	challenge.h challenge.c
