--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib/src
+DEFAULT_INCLUDES = -I$(top_builddir)/lib
 AM_LDFLAGS = -no-install
 LDADD = ../lib/src/libgsasl.la
 
