Initiate creation of GC ("generic crypto") as non-GSASL specific Nettle/Libgcrypt wrapper. Obsolete gsasl_nonce, gsasl_random, gsasl_md5, gsasl_hmac_md5.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -23,11 +23,7 @@ ACLOCAL_AMFLAGS = -I m4
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libgsasl.pc
 
-SUBDIRS = po gl
-
-if NETTLE
-SUBDIRS += crypto
-endif
+SUBDIRS = po gl crypto
 
 # Plugins:
 if EXTERNAL
