--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -20,27 +20,19 @@
 
 lib_LTLIBRARIES = libgsasl.la
 
-AM_CPPFLAGS = -I$(srcdir)/../gl -I$(srcdir)/.. \
-	@LIBGCRYPT_CFLAGS@ @NETTLE_CFLAGS@
+AM_CPPFLAGS = -I$(srcdir)/../gl -I$(srcdir)/../crypto -I$(srcdir)/..
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
 include_HEADERS = gsasl.h
 
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
-libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @NETTLE_LIBS@
+libgsasl_la_LIBADD = @LTLIBINTL@ ../crypto/libgc.la
 libgsasl_la_SOURCES = gsasl.h.in internal.h crypto.h \
 	init.c done.c error.c version.c common.c \
 	callback.c callback-c.c callback-s.c \
 	supportp.c suggest.c listmech.c \
 	xstart.c xstep.c xfinish.c xcode.c \
 	base64.c md5pwd.c obsolete.c
-
-if NETTLE
-libgsasl_la_SOURCES += nettle.c
-endif
-if LIBGCRYPT
-libgsasl_la_SOURCES += libgcrypt.c
-endif
 
 if STRINGPREP
 libgsasl_la_SOURCES += stringprep.c
