--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -20,7 +20,8 @@
 
 lib_LTLIBRARIES = libgsasl.la
 
-AM_CPPFLAGS = -I$(srcdir)/../gl -I$(srcdir)/../crypto -I$(srcdir)/..
+AM_CPPFLAGS = -I$(srcdir)/../gl -I$(srcdir)/.. \
+	-I$(srcdir)/../crypto -I../crypto
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
 include_HEADERS = gsasl.h
