--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,6 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
+DEFS =
 AM_CPPFLAGS = -I$(top_builddir)/lib -I$(top_builddir)/lib/src
 AM_LDFLAGS = -no-install
 LDADD = ../lib/src/libgsasl.la libutils.la
