--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ AC_INIT([gsasl], [0.1.2], [bug-gsasl@gnu.org])
 
 AC_PREREQ(2.59)
 AM_INIT_AUTOMAKE([1.8 gnits])
+AC_CONFIG_HEADERS(config.h)
 
 AM_GNU_GETTEXT(external)
 AM_GNU_GETTEXT_VERSION(0.14.1)
