--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ AC_INIT([gsasl], [0.1.2], [bug-gsasl@gnu.org])
 AC_PREREQ(2.59)
 AM_INIT_AUTOMAKE([1.8 gnits])
 AC_CONFIG_HEADERS(config.h)
+AB_INIT
 
 # Internationalization.
 AM_GNU_GETTEXT(external)
