--- a/po/.cvsignore
+++ b/po/.cvsignore
@@ -1,16 +1,20 @@
+boldquot.sed
+en@boldquot.header
+en@boldquot.insert-header
+en@boldquot.po
+en@quot.header
+en@quot.insert-header
+en@quot.po
+*.gmo
+gsasl.pot
+insert-header.sin
 Makefile
 Makefile.in
 Makefile.in.in
 Makevars.template
 POTFILES
-Rules-quot
-boldquot.sed
-en@boldquot.header
-en@quot.header
-gsasl.pot
-insert-header.sin
 quot.sed
 remove-potcdate.sed
 remove-potcdate.sin
-*.gmo
+Rules-quot
 stamp-po
