(update-po): Add.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -70,6 +70,12 @@ SUBDIRS += src
 
 # Maintainer targets
 
+update-po:
+	cd po && \
+	wget --timestamping --retr-symlinks \
+		ftp://ftp.unex.es/pub/gnu-i18n/po/maint/$(PACKAGE)/??.po && \
+	cvs commit -m "Sync with TP." ??.po
+
 ChangeLog:
 	cvs2cl --fsf --FSF --usermap ../.cvsusers -I ChangeLog -I .cvs \
 		-I autogen.sh
