--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -73,7 +73,7 @@ SUBDIRS += src
 POURL = ftp://tiger.informatik.hu-berlin.de/pub/po/maint/$(PACKAGE)
 update-po:
 	cd po && \
-	wget --non-verbose --timestamping --retr-symlinks $(POURL)/??.po && \
+	wget --timestamping --retr-symlinks $(POURL)/??.po && \
 	cvs add ??.po || true && \
 	cvs commit -m "Sync with TP." ??.po
 
