--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 POURL = ftp://tiger.informatik.hu-berlin.de/pub/po/maint/$(PACKAGE)
 update-po:
 	cd po && \
-	wget --timestamping --retr-symlinks $(POURL)/??.po && \
+	wget --non-verbose --timestamping --retr-symlinks $(POURL)/??.po && \
 	cvs add ??.po || true && \
 	cvs commit -m "Sync with TP." ??.po
 
