Use new gnulib-tool stuff.

--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,9 @@ AC_SEARCH_LIBS(gethostbyname, nsl)
 AC_CHECK_FUNCS(getaddrinfo)
 
 # For gnulib stuff in gl/.
+gl_SOURCE_BASE(gl)
+gl_M4_BASE(gl/m4)
+gl_MODULES(getopt progname strdup dummy exit error getpass-gnu)
 gl_INIT
 
 # Try to find readline.
