--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -319,6 +319,7 @@ AM_CONDITIONAL(SERVER, test x$server = xyes)
 # For gnulib stuff in gl/.
 gl_SOURCE_BASE(gl)
 gl_M4_BASE(gl/m4)
+gl_LIB(libgl)
 gl_MODULES(dummy strdup)
 gl_INIT
 
