--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -27,5 +27,7 @@ libutils_la_SOURCES = utils.h utils.c
 
 TESTS_ENVIRONMENT = THREADSAFETY_FILES=$(top_srcdir)/lib/*/*.c
 
-TESTS = simple cram-md5 threadsafety
-check_PROGRAMS = simple cram-md5
+test_programs = simple cram-md5
+
+TESTS = $(test_programs) threadsafety
+check_PROGRAMS = $(test_programs)
