--- a/lib/cram-md5/Makefile.am
+++ b/lib/cram-md5/Makefile.am
@@ -24,3 +24,11 @@ AM_CPPFLAGS = -I$(srcdir)/../src -I../src \
 noinst_LTLIBRARIES = libgsasl-cram_md5.la
 libgsasl_cram_md5_la_SOURCES = cram-md5.h cram-md5.c \
 	challenge.h challenge.c digest.h digest.c
+
+if CLIENT
+libgsasl_cram_md5_la_SOURCES += init_client.c
+endif
+
+if SERVER
+libgsasl_cram_md5_la_SOURCES += init_server.c
+endif
