--- a/lib/cram-md5/Makefile.am
+++ b/lib/cram-md5/Makefile.am
@@ -22,13 +22,13 @@ AM_CPPFLAGS = -I$(srcdir)/../src -I../src \
 	-I$(srcdir)/../crypto -I../crypto
 
 noinst_LTLIBRARIES = libgsasl-cram_md5.la
-libgsasl_cram_md5_la_SOURCES = cram-md5.h cram-md5.c \
+libgsasl_cram_md5_la_SOURCES = cram-md5.h \
 	challenge.h challenge.c digest.h digest.c
 
 if CLIENT
-libgsasl_cram_md5_la_SOURCES += init_client.c
+libgsasl_cram_md5_la_SOURCES += init_client.c client.c
 endif
 
 if SERVER
-libgsasl_cram_md5_la_SOURCES += init_server.c
+libgsasl_cram_md5_la_SOURCES += init_server.c server.c
 endif
