Add new callback/property interface, thereby deprecating old callback system. Move obsolete APIs from gsasl.h.in to gsasl-compat.h. Include gsasl-compat.h in gsasl.h.in. Fix the ANONYMOUS mechanism to use the new interface, including the new allocating mechanism interface.

--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -24,13 +24,13 @@ AM_CPPFLAGS = -I$(srcdir)/../gl -I$(srcdir)/.. \
 	-I$(srcdir)/../crypto -I../crypto
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
-include_HEADERS = gsasl.h
+include_HEADERS = gsasl.h gsasl-compat.h
 
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 libgsasl_la_LIBADD = @LTLIBINTL@ ../crypto/libgc.la
 libgsasl_la_SOURCES = gsasl.h.in internal.h \
 	init.c done.c register.c error.c version.c common.c \
-	callback.c callback-c.c callback-s.c \
+	callback.c property.c callback-c.c callback-s.c \
 	supportp.c suggest.c listmech.c \
 	xstart.c xstep.c xfinish.c xcode.c \
 	base64.c md5pwd.c crypto.c obsolete.c
