Make LOGIN client use new callback API. Add password/authzid properties.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -86,6 +86,8 @@ extern "C"
     GSASL_NO_SERVER_CODE,
     GSASL_NO_CALLBACK,
     GSASL_NO_ANONYMOUS_TOKEN,
+    GSASL_NO_AUTHZID,
+    GSASL_NO_PASSWORD,
     /* Mechanism specific errors. */
     GSASL_GSSAPI_RELEASE_BUFFER_ERROR,
     GSASL_GSSAPI_IMPORT_NAME_ERROR,
@@ -131,7 +133,9 @@ extern "C"
   enum Gsasl_property
   {
     GSASL_CLIENT_ANONYMOUS,
-    GSASL_CLIENT_SIMPLE,
+    GSASL_CLIENT_AUTHID,
+    GSASL_CLIENT_AUTHZID,
+    GSASL_CLIENT_PASSWORD,
     GSASL_CLIENT_PASSCODE,
     GSASL_CLIENT_PIN,
     GSASL_CLIENT_SERVICE,
