--- a/lib/anonymous/Makefile.am
+++ b/lib/anonymous/Makefile.am
@@ -21,4 +21,13 @@
 AM_CPPFLAGS = -I$(srcdir)/../src -I$(builddir)/../src
 
 noinst_LTLIBRARIES = libgsasl-anonymous.la
-libgsasl_anonymous_la_SOURCES = anonymous.h anonymous.c
+libgsasl_anonymous_la_SOURCES = anonymous.h
+
+if CLIENT
+libgsasl_cram_md5_la_SOURCES += client.c
+endif
+
+if SERVER
+libgsasl_cram_md5_la_SOURCES += server.c
+endif
+
