--- a/lib/digest-md5/Makefile.am
+++ b/lib/digest-md5/Makefile.am
@@ -23,5 +23,13 @@ AM_CPPFLAGS = -I$(srcdir)/../src -I../src \
 	-I$(srcdir)/../gl -I../crypto
 
 noinst_LTLIBRARIES = libgsasl-digest_md5.la
-libgsasl_digest_md5_la_SOURCES = digest-md5.h digest-md5.c
+libgsasl_digest_md5_la_SOURCES = digest-md5.h shared.h shared.c getsubopt.c
 libgsasl_digest_md5_la_LIBADD = $(top_builddir)/gl/libgl.la
+
+if CLIENT
+libgsasl_digest_md5_la_SOURCES += client.c
+endif
+
+if SERVER
+libgsasl_digest_md5_la_SOURCES += server.c
+endif
