--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -131,7 +131,7 @@ extern "C"
   typedef struct Gsasl_session Gsasl_session;
 
   /* Callback/property types. */
-  enum Gsasl_property
+  typedef enum
   {
     GSASL_CLIENT_ANONYMOUS,
     GSASL_CLIENT_AUTHID,
@@ -155,10 +155,11 @@ extern "C"
     GSASL_SERVER_QOP,
     GSASL_SERVER_MAXBUF,
     GSASL_SERVER_CIPHER
-  };
-  typedef enum Gsasl_property Gsasl_property;
-  typedef int (*Gsasl_callback) (Gsasl * ctx, Gsasl_session * sctx,
-				 Gsasl_property prop);
+  } Gsasl_property;
+
+  /* Callback function prototype. */
+  typedef int (*Gsasl_callback_function) (Gsasl * ctx, Gsasl_session * sctx,
+					  Gsasl_property prop);
 
 /* Library entry and exit points: version.c, init.c, done.c */
   extern int gsasl_init (Gsasl ** ctx);
@@ -176,8 +177,10 @@ extern "C"
   extern void *gsasl_application_data_get (Gsasl * ctx);
   extern void gsasl_appinfo_set (Gsasl_session * sctx, void *appdata);
   extern void *gsasl_appinfo_get (Gsasl_session * sctx);
-  extern void gsasl_callback_set (Gsasl_session * sctx, Gsasl_callback cb);
-  extern void gsasl_callback_set_global (Gsasl * ctx, Gsasl_callback cb);
+  extern void gsasl_callback_set (Gsasl_session * sctx,
+				  Gsasl_callback_function cb);
+  extern void gsasl_callback_set_global (Gsasl * ctx,
+					 Gsasl_callback_function cb);
   extern int gsasl_callback (Gsasl_session * sctx, Gsasl_property prop);
   extern int gsasl_callback_global (Gsasl * ctx, Gsasl_property prop);
 
