Check for netinet/in.h, reported by Paul Romero <paulr@rcom-software.com>.

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -43,6 +43,9 @@ AC_PROG_CC
 gl_EARLY
 AC_PROG_LIBTOOL
 
+# Checks for header files.
+AC_CHECK_HEADERS(sys/types.h netinet/in.h)
+
 # ANONYMOUS
 AC_ARG_ENABLE(anonymous,
   AS_HELP_STRING([--disable-anonymous], [don't use the ANONYMOUS mechanism]),
